--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Version 0.2</title>
     </head>
     <body>
-        
+        <h1>Title goes here</h1>
         <p>That's the latest version of the software</p>
     </body>
 </html>
