--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         <h1>Title goes here</h1>
         <p>That's the latest version of the software</p>
+        <h2>Slider goes here</h2>
     </body>
 </html>
