--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Version 0.2</title>
     </head>
     <body>
-        
+        <p>czesc czesc czesc </p>
         
     </body>
 </html>
