--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
         <h1>Title goes here</h1>
         <p>That's the latest version of the software</p>
         <h2>Slider goes here</h2>
+        <h3> this is the h3 tags</h3>
     </body>
 </html>
